--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,8 +8,14 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/activity_nightmode"
+        android:orderInCategory="100"
+        android:title="@string/night_mode"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/nav_logout"
         android:orderInCategory="100"
         android:title="Logout"
         app:showAsAction="never" />
+
 </menu>
