--- a/app/src/main/res/layout/activity_screen_1.xml
+++ b/app/src/main/res/layout/activity_screen_1.xml
@@ -59,13 +59,13 @@
         android:layout_height="wrap_content"
         android:text="@string/Unravel"
         android:paddingTop="150dp"
-        android:paddingLeft="200dp"
+        android:paddingLeft="150dp"
         android:textSize="30sp"
-        android:textColor="?android:attr/detailsElementBackground"
+        android:textColor="#fff"
         android:fontFamily="serif"
         tools:text="@string/Unravel"
-        android:layout_alignBottom="@+id/imageView"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true" />
+        android:id="@+id/textView3" />
 
 </RelativeLayout>
