--- a/app/src/main/res/layout/fragment_currency.xml
+++ b/app/src/main/res/layout/fragment_currency.xml
@@ -10,11 +10,11 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/editText_currency"
         android:hint="Enter amount here"
-        android:textAlignment="gravity" />
+        android:textAlignment="gravity"
+        android:inputType="numberDecimal" />
 
     <LinearLayout
         android:orientation="horizontal"
